clang/test/BSC/Negative/SafeZone/array_subscript_raw_pointer/array_subscript_raw_pointer_disabled.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// UNSUPPORTED: ENABLE_BSC_FUTURE

// Test that [] operator on raw pointers is ALLOWED when ENABLE_BSC_FUTURE is disabled
// This verifies that the feature is properly disabled by default

_Safe void test(void) {
    int a = 0;
    int* ptr = _Unsafe(&a);

    // Both of these should be allowed when feature is disabled
    *ptr = 1;   // expected-error {{'*' operator is forbidden in the safe zone}}
    ptr[0] = 1; // ok: [] operator restriction is disabled
}

// Test that array access syntax is also allowed for reading
_Safe void test2(void) {
    int arr[10] = {0};
    int* ptr = _Unsafe(&arr[0]);

    int val1 = *ptr;   // expected-error {{'*' operator is forbidden in the safe zone}}
    int val2 = ptr[0]; // ok: [] operator restriction is disabled
    int val3 = ptr[5]; // ok: [] operator restriction is disabled
}
